--- a/src/index.html
+++ b/src/index.html
@@ -1,11 +1,28 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Que juego hizo willyRex</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Playwrite+ES+Deco:wght@100..400&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="./styles.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
 </head>
+
 <body>
-    Que juego hizo willyRex, el juego
+    <h1 class="title">&iquest;Que juego hizo willyRex? El juego</h1>
+
+    <div class="game-container">
+        <div class="score">0</div>
+        <div class="action animate__animated">
+            <img src="./assets/dalas-300x300.png" alt="Dalas" />
+        </div>
+    </div>
+
+    <script type="text/javascript" src="./index.js"></script>
 </body>
+
 </html>
